# WBSManagementTool

./: .gitignore  AGENTS.md  IIS_Setup_Guide.md  README.md  development_plan.md  implementation_plan.md  package.json  rebuild_frontend.bat  rebuild_frontend.ps1  server_setup.bat  server_setup.ps1
backend/: .env.example  create_test_excel.py  generate_openapi.py  migrate_db.ps1  openapi.json  pyproject.toml  run_server.bat  seed.py  seed_db.ps1  setup_db.py  setup_phase2.ps1  sync_azure_devops.ps1  sync_azure_devops_dry_run.ps1
backend/alembic/: env.py
backend/alembic/versions/: 09bd225a7245_add_review_start_date_to_subtasks.py  20c1ec08906f_add_workload_percent_to_subtasks.py  2c6ce77ff281_make_resumption_date_optional.py  2ea34e729429_add_link_url_to_project_task_subtask.py  3ce15756f9b1_add_markers_table.py  444b2352dcc6_add_work_days_column.py  4675cbf7062a_initial_schema.py  5d6e7f8a9b0c_add_member_color_code.py  6a7b8c9d0e1f_add_member_resource_view_exclusion.py  7f9a1b2c3d4e_add_project_testing_id.py  8a9b0c1d2e3f_add_project_testing_sync_flag.py  9247d6bc5b00_add_subtask_interruptions_table.py  9b0c1d2e3f4a_add_member_choice_visibility.py  a1b2c3d4e5f6_add_azure_devops_sync.py  a8d5b96c4a02_make_subtask_type_id_nullable.py  aa1b2c3d4e5f_add_member_azure_devops_account.py  b2c3d4e5f6a7_sync_to_devops_default_true.py  b3c4d5e6f7a8_add_shared_filters_table.py  (+7 more)
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_api_settings.py  test_crud.py  test_import_data_export.py  test_shared_filter.py
docs/: USER_GUIDE.md  (+7 more)
(+141 files in other folders)
