[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wbs-backend"
version = "0.1.0"
description = "WBS管理ツール バックエンド"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "python-multipart",
]

[tool.setuptools]
packages = []
